--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,17 @@
 [profile.default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-remappings = ['dss-test/=lib/dss-test/src/']
+src = "src"
+out = "out"
+script = 'script'
+libs = ["lib"]
+solc = '0.8.16'
+# Disabling optimizations to keep the current behavior
+optimizer = false
 
-# See more config options https://github.com/gakonst/foundry/tree/master/config
+fs_permissions = [
+    { access = "read", path = "./out/" },
+    { access = "read", path = "./script/input/" },
+    { access = "read-write", path = "./script/output/" }
+]
+
+[rpc_endpoints]
+mainnet = "${ETH_RPC_URL}"
